--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body {
     padding: 15px;
     background: #f9f9ff;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
 }
 
 /* Chat Messages */
